--- a/wp-content/plugins/events-manager/includes/langs/dbem-da_DK.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-da_DK.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr ""
 
 #: admin/em-options.php:1763
@@ -317,11 +317,11 @@ msgid "This setting was not changed."
 msgstr ""
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr ""
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -350,7 +350,7 @@ msgid "Search forms"
 msgstr "Søg formularer"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr ""
 
 #: admin/em-options.php:522
@@ -362,7 +362,7 @@ msgid "Events list page"
 msgstr ""
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr ""
 
 #: admin/em-options.php:525
@@ -654,7 +654,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr ""
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal Beliggenhed"
 
 #: admin/em-options.php:1410
@@ -1080,7 +1080,7 @@ msgid "All events link text?"
 msgstr "Tekst på alle events link"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Event-lokationer"
 
 #: widgets/em-locations.php:22
@@ -1340,7 +1340,7 @@ msgstr "Hjælp"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Lokationer"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1522,7 +1522,7 @@ msgstr "Dato"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Lokation"
 
 #: admin/em-bookings.php:152
@@ -1720,7 +1720,7 @@ msgid "Category Related Placeholders"
 msgstr "Kategori relateret pladsholdere"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Lokationsrelateret pladsholdere"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -1925,7 +1925,7 @@ msgid "Example:"
 msgstr "Eksempel:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Lokationer på din hovedblog"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2193,7 +2193,7 @@ msgid "no default location"
 msgstr "Ingen standard lokation"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Standard lokation"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2209,7 +2209,7 @@ msgstr ""
 "(for øjeblikket ikke anvendelig med event ejerskab slået til, kommer snart!)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "Standard lokationsland"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3646,7 +3646,7 @@ msgid ""
 msgstr ""
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr ""
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3659,7 +3659,7 @@ msgid "Event."
 msgstr ""
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr ""
 
 #: admin/em-options.php:1639
@@ -4811,7 +4811,7 @@ msgstr "Mine events"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "Mine lokationer"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -4867,12 +4867,12 @@ msgid "Add Event"
 msgstr "Tilføj event"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Tilføj lokation"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Rediger lokation"
 
 #: buddypress/screens/profile.php:11
@@ -5542,7 +5542,7 @@ msgid "The country"
 msgstr "Landet"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "Lokationsnavn"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6317,31 +6317,31 @@ msgid "Display locations on your blog."
 msgstr "Vis lokationer på din blog."
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Tilføj ny lokation"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Ny lokation"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Se lokation"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Søg lokationer"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "Ingen lokationer fundet"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "Ingen lokationer fundet i papirkurven"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Forældre lokation"
 
 #: em-template-tags.php:286
@@ -6678,15 +6678,15 @@ msgid "This event does not have a physical location."
 msgstr "Denne event har ingen fysisk lokation."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Lokation:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Ingen lokation"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Lokationsnavn:"
 
 #: templates/forms/event/location.php:70
@@ -6731,7 +6731,7 @@ msgid "none selected"
 msgstr "Ingen er valgt"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "Lokation ikke fundet"
 
 #: templates/forms/event/recurring-when.php:10
@@ -6903,7 +6903,7 @@ msgstr "Eventbillede"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "Du har ingen brugerdefinerede attributter i nogen af dine administrator "
@@ -6913,7 +6913,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -6940,7 +6940,7 @@ msgstr ""
 "tilføje alle felterne nedenfor adskilt af kommaer."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Lokationsnavn"
 
 #: templates/forms/location-editor.php:29
@@ -6956,7 +6956,7 @@ msgid "HTML Allowed."
 msgstr "HTML tilladt."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Lokationsbillede"
 
 #: templates/forms/event/bookings-ticket-form.php:12
