--- a/wp-content/plugins/events-manager/includes/langs/dbem-zh_TW.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-zh_TW.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "沒有位置信息"
 
 #: admin/em-options.php:1763
@@ -316,11 +316,11 @@ msgid "This setting was not changed."
 msgstr ""
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr ""
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -349,7 +349,7 @@ msgid "Search forms"
 msgstr "搜索表單"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr ""
 
 #: admin/em-options.php:522
@@ -361,7 +361,7 @@ msgid "Events list page"
 msgstr ""
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr ""
 
 #: admin/em-options.php:525
@@ -653,7 +653,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr ""
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal的位置"
 
 #: admin/em-options.php:1410
@@ -1079,7 +1079,7 @@ msgid "All events link text?"
 msgstr "所有活動鏈接文本？"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "活動地點"
 
 #: widgets/em-locations.php:22
@@ -1339,7 +1339,7 @@ msgstr "幫助"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "地點"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1518,7 +1518,7 @@ msgstr "日期"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "地址"
 
 #: admin/em-bookings.php:152
@@ -1716,7 +1716,7 @@ msgid "Category Related Placeholders"
 msgstr "和類別相關的佔位符"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "和位置相關的佔位符"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -1914,7 +1914,7 @@ msgid "Example:"
 msgstr "例子："
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "主博客上的位置？"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2165,7 +2165,7 @@ msgid "no default location"
 msgstr "無默認位置"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "默認位置"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2178,7 +2178,7 @@ msgid "(not applicable with event ownership on presently, coming soon!)"
 msgstr "（暫時不可申請活動所有權，即將啟動！）"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "默認國家"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3566,7 +3566,7 @@ msgstr ""
 "地圖，以下的設置將被使用。"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "位置標示的格式"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3579,7 +3579,7 @@ msgid "Event."
 msgstr "活動。"
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "單項地址／活動地圖格式"
 
 #: admin/em-options.php:1639
@@ -4684,7 +4684,7 @@ msgstr "我的活動"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "我的位置"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -4740,12 +4740,12 @@ msgid "Add Event"
 msgstr "增加活動"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "增加位置"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "編輯位置"
 
 #: buddypress/screens/profile.php:11
@@ -5391,7 +5391,7 @@ msgid "The country"
 msgstr "國家"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "位置名稱"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6152,31 +6152,31 @@ msgid "Display locations on your blog."
 msgstr "在您的博客中顯示位置"
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "添加新位置"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "新位置"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "查看位置"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "搜索位置"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "沒有找到任何位置"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "在垃圾箱中沒有找到任何位置"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "主要位置"
 
 #: em-template-tags.php:286
@@ -6507,15 +6507,15 @@ msgid "This event does not have a physical location."
 msgstr "這項活動沒有一個物理位置。"
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "地址："
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "無位置"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "位置名稱："
 
 #: templates/forms/event/location.php:70
@@ -6558,7 +6558,7 @@ msgid "none selected"
 msgstr "未選擇"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "未找到位置"
 
 #: templates/forms/event/recurring-when.php:10
@@ -6726,7 +6726,7 @@ msgstr "活動圖片"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "在你的位置管理器模版設置中你沒有定義任何自定義屬性。請添加它們到<a href='%s'>"
@@ -6735,7 +6735,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -6759,7 +6759,7 @@ msgstr ""
 "上，加上如下字段並通過逗號分開試試。"
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "位置名稱"
 
 #: templates/forms/location-editor.php:29
@@ -6775,7 +6775,7 @@ msgid "HTML Allowed."
 msgstr "HTML允許。"
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "位置圖像"
 
 #: templates/forms/event/bookings-ticket-form.php:12
