--- a/wp-content/plugins/events-manager/includes/langs/dbem-ca.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-ca.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "Cap missatge Ubicacions"
 
 #: admin/em-options.php:1763
@@ -317,11 +317,11 @@ msgid "This setting was not changed."
 msgstr ""
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr ""
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -350,7 +350,7 @@ msgid "Search forms"
 msgstr "Cercar formes"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr ""
 
 #: admin/em-options.php:522
@@ -362,7 +362,7 @@ msgid "Events list page"
 msgstr ""
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr ""
 
 #: admin/em-options.php:525
@@ -654,7 +654,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr ""
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal Ubicació"
 
 #: admin/em-options.php:1410
@@ -1080,7 +1080,7 @@ msgid "All events link text?"
 msgstr "Texte de l'enllaç a tots els esdeveniments?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Ubicaciones d'esdeveniments"
 
 #: widgets/em-locations.php:22
@@ -1341,7 +1341,7 @@ msgstr "Ajuda"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Localitzacions"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1529,7 +1529,7 @@ msgstr "Data"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Localització"
 
 #: admin/em-bookings.php:152
@@ -1734,7 +1734,7 @@ msgid "Category Related Placeholders"
 msgstr "Marcadors de posició de categories relacionades"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Marcadors de posició de localitzacions relacionades"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -1942,7 +1942,7 @@ msgid "Example:"
 msgstr "Exemple:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Localitzacions al bloc principal?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2213,7 +2213,7 @@ msgid "no default location"
 msgstr "sense localització per defecte"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Localització per defecte"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2229,7 +2229,7 @@ msgstr ""
 "(actualment no aplicable amb la propiedad d'esdeveniments, molt aviat!)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "País de la localitzacio per defecte"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3696,7 +3696,7 @@ msgid ""
 msgstr ""
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "Format per defecte del globus d'una localització"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3711,7 +3711,7 @@ msgid "Event."
 msgstr "Esdeveniment"
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "Format del títol de la pàgina d'un sol esdeveniment"
 
 #: admin/em-options.php:1639
@@ -4906,7 +4906,7 @@ msgstr "Els meus esdeveniments"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "Els meus llocs"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -4962,12 +4962,12 @@ msgid "Add Event"
 msgstr "Afegir esdeveniment"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Afegir localització"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Editar localització"
 
 #: buddypress/screens/profile.php:11
@@ -5658,7 +5658,7 @@ msgid "The country"
 msgstr "País"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "Nom de la localització"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6449,31 +6449,31 @@ msgid "Display locations on your blog."
 msgstr "Mostrar les localitzacions al teu bloc."
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Afegir nova localització"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Nova localització"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Veure localització"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Cercar localitzacions"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "No s'han trobat localitzacions"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "No s'han trobat localitzacions a la paparera"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Localització pare"
 
 #: em-template-tags.php:286
@@ -6816,15 +6816,15 @@ msgid "This event does not have a physical location."
 msgstr "Aquest esdeveniment no té una localització física."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Localització:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Sense localització"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Nom de la localizació:"
 
 #: templates/forms/event/location.php:70
@@ -6869,7 +6869,7 @@ msgid "none selected"
 msgstr "cap seleccionat"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "Localització no trobada"
 
 #: templates/forms/event/recurring-when.php:10
@@ -7041,7 +7041,7 @@ msgstr "Imatge de l'esdeveniment"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "No tens atributs personalitzats definits a qualsevol de les configuracions "
@@ -7051,7 +7051,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -7079,7 +7079,7 @@ msgstr ""
 "següents separats per comes."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Nom de la localització"
 
 #: templates/forms/location-editor.php:29
@@ -7095,7 +7095,7 @@ msgid "HTML Allowed."
 msgstr "HTML permès."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Imatge de la localització"
 
 #: templates/forms/event/bookings-ticket-form.php:12
