--- a/wp-content/plugins/events-manager/includes/langs/dbem-cs_CZ.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-cs_CZ.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "No Místa zpráva"
 
 #: admin/em-options.php:1763
@@ -324,11 +324,11 @@ msgid "This setting was not changed."
 msgstr "Toto nastavení nebylo změněno."
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr "Zadejte ID umístění, nebo zanechte prázdné pro žádné umístění."
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr "Zadejte ID umístění"
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -357,7 +357,7 @@ msgid "Search forms"
 msgstr "Vyhledávací formuláře"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr "Stránky správce Událostí/Míst"
 
 #: admin/em-options.php:522
@@ -369,7 +369,7 @@ msgid "Events list page"
 msgstr "Stránka seznamu událostí"
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr "Stránka seznamu umístění"
 
 #: admin/em-options.php:525
@@ -663,7 +663,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr "Popis události, který bude zobrazen v kalendáři."
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal umístění"
 
 #: admin/em-options.php:1410
@@ -1103,7 +1103,7 @@ msgid "All events link text?"
 msgstr "Celý text odkazů na události?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Události v místech"
 
 #: widgets/em-locations.php:22
@@ -1363,7 +1363,7 @@ msgstr "Pomoc"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Místa konání"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1551,7 +1551,7 @@ msgstr "Datum"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Místo konání"
 
 #: admin/em-bookings.php:152
@@ -1751,7 +1751,7 @@ msgid "Category Related Placeholders"
 msgstr "Související kategorie symboly"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Související umístění zástupných symbolů"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -1955,7 +1955,7 @@ msgid "Example:"
 msgstr "Příklad:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Místa na hlavní straně?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2221,7 +2221,7 @@ msgid "no default location"
 msgstr "žádné výchozí místo konání"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Výchozí místo konání"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2235,7 +2235,7 @@ msgstr ""
 "(nevztahuje se akce vlastnictví v současné době, ale to brzo přijde :-)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "Výchozí země"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3696,7 +3696,7 @@ msgstr ""
 "všech umístění a událostí, použito je nastavení níže."
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "Formát bubliny u míst"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3709,7 +3709,7 @@ msgid "Event."
 msgstr "Událost."
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "Formát jednoho umístění/události"
 
 #: admin/em-options.php:1639
@@ -4840,7 +4840,7 @@ msgstr "moje události"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "moje stránka"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -4896,12 +4896,12 @@ msgid "Add Event"
 msgstr "Přidat událost"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Přidat místo konání"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Upravit místo konání"
 
 #: buddypress/screens/profile.php:11
@@ -5576,7 +5576,7 @@ msgid "The country"
 msgstr "země"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "název místa"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6351,31 +6351,31 @@ msgid "Display locations on your blog."
 msgstr "Zobrazení umístění na svém blogu."
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Přidat nové umístění"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Nové umístění"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Zobrazit umístění"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Vyhledávání lokalit"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "Žádné umístění nebylo nalezeno"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "Žádné umístění nebylo nalezeno v koši"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Rodičovské umístění"
 
 #: em-template-tags.php:286
@@ -6703,15 +6703,15 @@ msgid "This event does not have a physical location."
 msgstr "Tato událost nemá fyzické umístění."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Umístění:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Žádné umístění"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Název místa konání:"
 
 #: templates/forms/event/location.php:70
@@ -6756,7 +6756,7 @@ msgid "none selected"
 msgstr "Nevybráno"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "Lokalita nebyla nalezena"
 
 #: templates/forms/event/recurring-when.php:10
@@ -6928,14 +6928,14 @@ msgstr "Obrázek k události"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -6957,7 +6957,7 @@ msgstr ""
 "přidáním všech níže uvedených polí oddělených čárkou."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Název místa"
 
 #: templates/forms/location-editor.php:29
@@ -6973,7 +6973,7 @@ msgid "HTML Allowed."
 msgstr "Povolené HTML."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Obrázek umístění"
 
 #: templates/forms/event/bookings-ticket-form.php:12
