--- a/wp-content/plugins/events-manager/includes/langs/dbem-de_DE.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-de_DE.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "Kein Lage Nachricht"
 
 #: admin/em-options.php:1763
@@ -334,11 +334,11 @@ msgid "This setting was not changed."
 msgstr "Diese Einstellung wurde nicht geändert."
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr "Bitte Standort ID eingeben oder leer lassen, wenn kein Standort."
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr "Bitte Standort ID eingeben."
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -372,7 +372,7 @@ msgid "Search forms"
 msgstr "Suchformulare"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr "Veranstaltung/Veranstaltungsorder Admin-Seiten"
 
 #: admin/em-options.php:522
@@ -384,7 +384,7 @@ msgid "Events list page"
 msgstr "Listenseite Veranstaltungen"
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr "Listenseite Veranstaltungsorte"
 
 #: admin/em-options.php:525
@@ -704,7 +704,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr "Die Beschreibung der Veranstaltung wird im Kalender angezeigt."
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal Ort"
 
 #: admin/em-options.php:1410
@@ -1178,7 +1178,7 @@ msgid "All events link text?"
 msgstr "Alle Veranstaltungen Link-Text?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Veranstaltungsorte"
 
 #: widgets/em-locations.php:22
@@ -1438,7 +1438,7 @@ msgstr "Hilfe"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Veranstaltungsorte"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1634,7 +1634,7 @@ msgstr "Datum"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Veranstaltungsort"
 
 #: admin/em-bookings.php:152
@@ -1837,7 +1837,7 @@ msgid "Category Related Placeholders"
 msgstr "Platzhalter für Kategorien"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Platzhalter für Veranstaltungsorte"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -2046,7 +2046,7 @@ msgid "Example:"
 msgstr "Beispiel:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Veranstaltungsorte dem Haupt-Blog zuordnen?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2318,7 +2318,7 @@ msgid "no default location"
 msgstr "kein Standard-Veranstaltungsort"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Standard-Veranstaltungsort"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2335,7 +2335,7 @@ msgstr ""
 "verfügbar!)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "Standard-Land"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3873,7 +3873,7 @@ msgstr ""
 "verwendet."
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "Kartenballonformat"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3886,7 +3886,7 @@ msgid "Event."
 msgstr "Veranstaltung."
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "Einzelner Ort/Veranstaltungskartenformat"
 
 #: admin/em-options.php:1639
@@ -5099,7 +5099,7 @@ msgstr "Meine Veranstaltungen"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "Meine Veranstaltungsorte"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -5155,12 +5155,12 @@ msgid "Add Event"
 msgstr "Veranstaltung hinzufügen"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Veranstaltungsort hinzufügen"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Veranstaltungsort Bearbeiten"
 
 #: buddypress/screens/profile.php:11
@@ -5853,7 +5853,7 @@ msgid "The country"
 msgstr "Das Land"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "Standort-Name"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6653,31 +6653,31 @@ msgid "Display locations on your blog."
 msgstr "Veranstaltungsorte im Blog anzeigen"
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Veranstaltungsort hinzufügen"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Neuer Veranstaltungsort"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Veranstaltungsort Anzeigen"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Veranstaltungsorte suchen"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "Keine Veranstaltungsorte gefunden"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "Keine Veranstaltungsorte im Papierkorb gefunden"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Übergeordnete Veranstaltungsorte"
 
 #: em-template-tags.php:286
@@ -7029,15 +7029,15 @@ msgid "This event does not have a physical location."
 msgstr "Diese Veranstaltung hat keinen physischen Standort."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Veranstaltungsort:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Kein Veranstaltungsort"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Veranstaltungsort Name:"
 
 #: templates/forms/event/location.php:70
@@ -7082,7 +7082,7 @@ msgid "none selected"
 msgstr "keine ausgewählt"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "Veranstaltungsort nicht gefunden"
 
 #: templates/forms/event/recurring-when.php:10
@@ -7254,7 +7254,7 @@ msgstr "Bild der Veranstaltung"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "Du hast in keinem deiner Ortsmanager Vorlagen Einstellungen individuelle "
@@ -7264,7 +7264,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -7291,7 +7291,7 @@ msgstr ""
 "angegebenen Felder durch Komma getrennt eingibst."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Standort-Name"
 
 #: templates/forms/location-editor.php:29
@@ -7307,7 +7307,7 @@ msgid "HTML Allowed."
 msgstr "HTML erlaubt."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Bild vom Veranstaltungsort"
 
 #: templates/forms/event/bookings-ticket-form.php:12
