--- a/wp-content/plugins/events-manager/includes/langs/dbem-en_GB.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-en_GB.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr ""
 
 #: admin/em-options.php:1763
@@ -317,11 +317,11 @@ msgid "This setting was not changed."
 msgstr ""
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr ""
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -350,7 +350,7 @@ msgid "Search forms"
 msgstr ""
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr ""
 
 #: admin/em-options.php:522
@@ -362,7 +362,7 @@ msgid "Events list page"
 msgstr ""
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr ""
 
 #: admin/em-options.php:525
@@ -654,7 +654,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr ""
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr ""
 
 #: admin/em-options.php:1410
@@ -1080,8 +1080,8 @@ msgid "All events link text?"
 msgstr "All events link text?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
-msgstr "Event Locations"
+msgid "Event Hikes"
+msgstr "Event Hikes"
 
 #: widgets/em-locations.php:22
 msgid "Event start date/time, location name"
@@ -1340,8 +1340,8 @@ msgstr "Help"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
-msgstr "Locations"
+msgid "Hikes"
+msgstr "Hikes"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
 msgid "Events Manager"
@@ -1526,8 +1526,8 @@ msgstr "Date"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
-msgstr "Location"
+msgid "Hike"
+msgstr "Hike"
 
 #: admin/em-bookings.php:152
 msgid "You do not have the rights to manage this ticket."
@@ -1728,8 +1728,8 @@ msgid "Category Related Placeholders"
 msgstr "Category Related Placeholders"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
-msgstr "Location Related Placeholders"
+msgid "Hike Related Placeholders"
+msgstr "Hike Related Placeholders"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
 msgid "Booking Related Placeholders"
@@ -1932,8 +1932,8 @@ msgid "Example:"
 msgstr "Example:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
-msgstr "Locations on main blog?"
+msgid "Hikes on main blog?"
+msgstr "Hikes on main blog?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
 #: admin/em-ms-options.php:166 admin/em-ms-options.php:167
@@ -2200,8 +2200,8 @@ msgid "no default location"
 msgstr "no default location"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
-msgstr "Default Location"
+msgid "Default Hike"
+msgstr "Default Hike"
 
 #: admin/em-options.php:330 admin/em-options.php:338
 msgid ""
@@ -2214,8 +2214,8 @@ msgid "(not applicable with event ownership on presently, coming soon!)"
 msgstr "(not applicable with event ownership on presently, coming soon!)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
-msgstr "Default Location Country"
+msgid "Default Hike Country"
+msgstr "Default Hike Country"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
 msgid "no default country"
@@ -3674,8 +3674,8 @@ msgstr ""
 "your locations and events, the settings below will be used."
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
-msgstr "Location balloon format"
+msgid "Hike balloon format"
+msgstr "Hike balloon format"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
 msgid ""
@@ -3688,8 +3688,8 @@ msgid "Event."
 msgstr "Event."
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
-msgstr "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
+msgstr "Single Hike/Event Map Format"
 
 #: admin/em-options.php:1639
 msgid ""
@@ -4862,8 +4862,8 @@ msgstr "My Events"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
-msgstr "My Locations"
+msgid "My Hikes"
+msgstr "My Hikes"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
 #: buddypress/screens/my-bookings.php:36
@@ -4918,13 +4918,13 @@ msgid "Add Event"
 msgstr "Add Event"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
-msgstr "Add Location"
+msgid "Add Hike"
+msgstr "Add Hike"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
-msgstr "Edit Location"
+msgid "Edit Hike"
+msgstr "Edit Hike"
 
 #: buddypress/screens/profile.php:11
 msgid ""
@@ -5603,8 +5603,8 @@ msgid "The country"
 msgstr "The country"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
-msgstr "Location name"
+msgid "Hike name"
+msgstr "Hike name"
 
 #: classes/em-location.php:256 classes/em-location.php:272
 #: classes/em-location.php:274
@@ -6390,32 +6390,32 @@ msgid "Display locations on your blog."
 msgstr "Display locations on your blog."
 
 #: em-posts.php:243
-msgid "Add New Location"
-msgstr "Add New Location"
+msgid "Add New Hike"
+msgstr "Add New Hike"
 
 #: em-posts.php:246
-msgid "New Location"
-msgstr "New Location"
+msgid "New Hike"
+msgstr "New Hike"
 
 #: em-posts.php:248
-msgid "View Location"
-msgstr "View Location"
+msgid "View Hike"
+msgstr "View Hike"
 
 #: em-posts.php:249
-msgid "Search Locations"
-msgstr "Search Locations"
+msgid "Search Hikes"
+msgstr "Search Hikes"
 
 #: em-posts.php:250
-msgid "No Locations Found"
-msgstr "No Locations Found"
+msgid "No Hikes Found"
+msgstr "No Hikes Found"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
-msgstr "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
+msgstr "No Hikes Found in Trash"
 
 #: em-posts.php:252
-msgid "Parent Location"
-msgstr "Parent Location"
+msgid "Parent Hike"
+msgstr "Parent Hike"
 
 #: em-template-tags.php:286
 msgid "You must log in to view and manage your events."
@@ -6752,16 +6752,16 @@ msgid "This event does not have a physical location."
 msgstr "This event does not have a physical location."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
-msgstr "Location:"
+msgid "Hike:"
+msgstr "Hike:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
-msgstr "No Location"
+msgid "No Hike"
+msgstr "No Hike"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
-msgstr "Location Name:"
+msgid "Hike Name:"
+msgstr "Hike Name:"
 
 #: templates/forms/event/location.php:70
 msgid ""
@@ -6804,8 +6804,8 @@ msgid "none selected"
 msgstr "none selected"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
-msgstr "Location not found"
+msgid "Hike not found"
+msgstr "Hike not found"
 
 #: templates/forms/event/recurring-when.php:10
 #: templates/forms/event/when-with-recurring.php:32
@@ -6976,21 +6976,21 @@ msgstr "Event Image"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 
@@ -7011,8 +7011,8 @@ msgstr ""
 "adding all the fields below seperated by commas."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
-msgstr "Location Name"
+msgid "Hike Name"
+msgstr "Hike Name"
 
 #: templates/forms/location-editor.php:29
 msgid "The name of the location"
@@ -7027,8 +7027,8 @@ msgid "HTML Allowed."
 msgstr "HTML Allowed."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
-msgstr "Location Image"
+msgid "Hike Image"
+msgstr "Hike Image"
 
 #: templates/forms/event/bookings-ticket-form.php:12
 msgid "Enter a ticket name."
