--- a/wp-content/plugins/events-manager/includes/langs/dbem-hu_HU.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-hu_HU.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr ""
 
 #: admin/em-options.php:1763
@@ -319,13 +319,13 @@ msgid "This setting was not changed."
 msgstr ""
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
 "Kérjük írja be a helyszínjének az ID-jét, vagy hagyja üresen, ha nincs "
 "helyszín."
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr "Kérjük, adja hozzá az ön helyszínének ID-jét."
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -354,7 +354,7 @@ msgid "Search forms"
 msgstr "Keresés"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr "Esemény/helyszín admin oldala"
 
 #: admin/em-options.php:522
@@ -366,7 +366,7 @@ msgid "Events list page"
 msgstr "Esemény lista oldal"
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr "Helszín lista oldal"
 
 #: admin/em-options.php:525
@@ -660,7 +660,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr "Az esemény leírása, ami a naptárban fog megjelenni."
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal helyszín"
 
 #: admin/em-options.php:1410
@@ -1087,7 +1087,7 @@ msgid "All events link text?"
 msgstr "Összes esemény link szöveg?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Rendezvény helyszínek"
 
 #: widgets/em-locations.php:22
@@ -1347,7 +1347,7 @@ msgstr "Súgó"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Helyszínek"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1512,7 +1512,7 @@ msgstr "Időpont"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Helyszín"
 
 #: admin/em-bookings.php:152
@@ -1710,7 +1710,7 @@ msgid "Category Related Placeholders"
 msgstr "Kategóriákkal kapcsolatos placeholderek"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Helyszínnel kapcsolatos placeholderek"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -1895,7 +1895,7 @@ msgid "Example:"
 msgstr "Például:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Helyszínek a blogon?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2149,7 +2149,7 @@ msgid "no default location"
 msgstr "nincs alapértelmezett helyszín"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Alapértelmezett helyszín"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2162,7 +2162,7 @@ msgid "(not applicable with event ownership on presently, coming soon!)"
 msgstr ""
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "Alapértelmezett ország"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3495,7 +3495,7 @@ msgid ""
 msgstr ""
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr ""
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3508,7 +3508,7 @@ msgid "Event."
 msgstr "Esemény."
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "Helyszín/Esemény térkép formátuma"
 
 #: admin/em-options.php:1639
@@ -4583,7 +4583,7 @@ msgstr "Saját események"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "Helyszíneim"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -4639,12 +4639,12 @@ msgid "Add Event"
 msgstr "Esemény hozzáadása"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Helyszín hozzáadása"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Helyszín szerkesztése"
 
 #: buddypress/screens/profile.php:11
@@ -5280,7 +5280,7 @@ msgid "The country"
 msgstr "Az ország"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "Helyszín név"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6026,31 +6026,31 @@ msgid "Display locations on your blog."
 msgstr "Helyszínek megjelenítése a blogon."
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Új helyszín hozzáadása"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Új helyszín"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Helyszín megtekintése"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Helyszínek keresése"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "Helyszín nem található"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "Helyszín nem található a lomtárban"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Szülő helyszín"
 
 #: em-template-tags.php:286
@@ -6374,15 +6374,15 @@ msgid "This event does not have a physical location."
 msgstr "Az eseménynek nincs megnevezhető helyszíne."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Helyszín:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Nincs helyszín"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Helyszín neve:"
 
 #: templates/forms/event/location.php:70
@@ -6427,7 +6427,7 @@ msgid "none selected"
 msgstr "nincs kiválasztva"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "A helyszín nem található"
 
 #: templates/forms/event/recurring-when.php:10
@@ -6599,14 +6599,14 @@ msgstr "Eseménykép"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -6628,7 +6628,7 @@ msgstr ""
 "tartalmát egymás mellé írod vesszővel elválasztva."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Helyszín név"
 
 #: templates/forms/location-editor.php:29
@@ -6644,7 +6644,7 @@ msgid "HTML Allowed."
 msgstr "HTML engedélyezett."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Kép a helyszínről"
 
 #: templates/forms/event/bookings-ticket-form.php:12
