--- a/wp-content/plugins/events-manager/includes/langs/dbem-ja.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-ja.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "いいえ場所ない メッセージ"
 
 #: admin/em-options.php:1763
@@ -316,11 +316,11 @@ msgid "This setting was not changed."
 msgstr ""
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr ""
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -349,7 +349,7 @@ msgid "Search forms"
 msgstr "検索フォーム"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr ""
 
 #: admin/em-options.php:522
@@ -361,7 +361,7 @@ msgid "Events list page"
 msgstr ""
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr ""
 
 #: admin/em-options.php:525
@@ -653,7 +653,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr ""
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCalの場所"
 
 #: admin/em-options.php:1410
@@ -1079,7 +1079,7 @@ msgid "All events link text?"
 msgstr "全てのイベントリンクテキストですか？"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "イベント場所"
 
 #: widgets/em-locations.php:22
@@ -1339,7 +1339,7 @@ msgstr "ヘルプ"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "場所"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1521,7 +1521,7 @@ msgstr "日"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "場所"
 
 #: admin/em-bookings.php:152
@@ -1720,7 +1720,7 @@ msgid "Category Related Placeholders"
 msgstr "カテゴリー関連のプレースホルダー"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "場所関連のプレースホルダー"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -1924,7 +1924,7 @@ msgid "Example:"
 msgstr "例"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "メインブログに設置しますか？"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2189,7 +2189,7 @@ msgid "no default location"
 msgstr "デフォルトの場所はありません。"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "デフォルトの場所"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2204,7 +2204,7 @@ msgid "(not applicable with event ownership on presently, coming soon!)"
 msgstr "イベントの所有権は現在適切ではありません。しばらくお待ちください）"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "デフォルトの国の場所"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3648,7 +3648,7 @@ msgstr ""
 "をマップに表示できます。設定は以下の物が使われます。"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "ロケーションバルーンのフォーマット"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3661,7 +3661,7 @@ msgid "Event."
 msgstr "イベントです。"
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "単一の場所/イベントマップのフォーマット"
 
 #: admin/em-options.php:1639
@@ -4818,7 +4818,7 @@ msgstr "マイイベント"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "マイ場所"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -4874,12 +4874,12 @@ msgid "Add Event"
 msgstr "イベントの追加"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "場所の追加"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "場所の編集"
 
 #: buddypress/screens/profile.php:11
@@ -5558,7 +5558,7 @@ msgid "The country"
 msgstr "国"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "場所名"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6330,31 +6330,31 @@ msgid "Display locations on your blog."
 msgstr "ブログに場所を表示します。"
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "新しい場所の追加"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "新しい場所"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "場所を見る"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "場所サーチ"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "場所が見つかりません"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "過去の場所が見つかりません"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "親場所"
 
 #: em-template-tags.php:286
@@ -6689,15 +6689,15 @@ msgid "This event does not have a physical location."
 msgstr "このイベントは物理的な場所が存在しません。"
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "場所"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "場所がありません"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "場所名:"
 
 #: templates/forms/event/location.php:70
@@ -6740,7 +6740,7 @@ msgid "none selected"
 msgstr "選択されていません"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "場所が見つかりません"
 
 #: templates/forms/event/recurring-when.php:10
@@ -6911,7 +6911,7 @@ msgstr "イベント画像"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "場所マネージャーテンプレート設定にカスタム要素が定義されていません。<a "
@@ -6920,7 +6920,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -6945,7 +6945,7 @@ msgstr ""
 "<a='http://maps.google.com'>maps.google.comで試してください</a>"
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "場所名"
 
 #: templates/forms/location-editor.php:29
@@ -6961,7 +6961,7 @@ msgid "HTML Allowed."
 msgstr "HTMLは使用できます。"
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "場所画像"
 
 #: templates/forms/event/bookings-ticket-form.php:12
