--- a/wp-content/plugins/events-manager/includes/langs/dbem-nb_NO.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-nb_NO.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "Ingen Steder melding"
 
 #: admin/em-options.php:1763
@@ -327,11 +327,11 @@ msgid "This setting was not changed."
 msgstr ""
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr ""
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -365,7 +365,7 @@ msgid "Search forms"
 msgstr "Søkefelt"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr "Event/Sted adminsider"
 
 #: admin/em-options.php:522
@@ -377,7 +377,7 @@ msgid "Events list page"
 msgstr "Events liste side"
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr "Sted liste side"
 
 #: admin/em-options.php:525
@@ -691,7 +691,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr "Beskrivelsen av hendelsen som vil bli vist i kalenderen."
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal Sted"
 
 #: admin/em-options.php:1410
@@ -1162,7 +1162,7 @@ msgid "All events link text?"
 msgstr "Alle hendelser knytte tekst?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Arrangementsteder"
 
 #: widgets/em-locations.php:22
@@ -1422,7 +1422,7 @@ msgstr "Hjelp"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Steder"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1617,7 +1617,7 @@ msgstr "Dato"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Sted"
 
 #: admin/em-bookings.php:152
@@ -1819,7 +1819,7 @@ msgid "Category Related Placeholders"
 msgstr "Kategori Relaterte Plassholdere"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Beliggenhet Relaterte Plassholdere"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -2025,7 +2025,7 @@ msgid "Example:"
 msgstr "eksempel"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Steder på hoved blogg?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2294,7 +2294,7 @@ msgid "no default location"
 msgstr "ingen standardplassering"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Standardplassering"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2309,7 +2309,7 @@ msgid "(not applicable with event ownership on presently, coming soon!)"
 msgstr "(Gjelder ikke med arrangementet eierskap på i dag, kommer snart!)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "Standardplassering Land"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3816,7 +3816,7 @@ msgstr ""
 "alle steder og hendelser, innstillingene nedenfor brukes."
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "Beliggenhet ballong format"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3829,7 +3829,7 @@ msgid "Event."
 msgstr "Hendelse"
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "Enkelt Sted / Hendelseskart Format"
 
 #: admin/em-options.php:1639
@@ -5019,7 +5019,7 @@ msgstr "My Events"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "Mine posisjoner"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -5075,12 +5075,12 @@ msgid "Add Event"
 msgstr "Legg til hendelse"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Legg til plassering"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Rediger plassering"
 
 #: buddypress/screens/profile.php:11
@@ -5760,7 +5760,7 @@ msgid "The country"
 msgstr "Landet"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "Beliggenhet navn"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6549,31 +6549,31 @@ msgid "Display locations on your blog."
 msgstr "Vise steder på bloggen."
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Legg til ny plassering"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Nytt sted"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Vis Plassering"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Søk Steder"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "Ingen Steder funnet"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "Ingen Steder funnet i papirkurven"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Forelder Sted"
 
 #: em-template-tags.php:286
@@ -6913,15 +6913,15 @@ msgid "This event does not have a physical location."
 msgstr "Denne hendelsen har ikke et fysisk sted."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Sted"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Ingen Sted"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Sted Navn:"
 
 #: templates/forms/event/location.php:70
@@ -6966,7 +6966,7 @@ msgid "none selected"
 msgstr "ikke spesifisert"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "Plassering ikke funnet"
 
 #: templates/forms/event/recurring-when.php:10
@@ -7138,7 +7138,7 @@ msgstr "Hendelses Bilde"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "Du trenger ikke ha noen tilpassede attributter definert i noen av dine "
@@ -7148,7 +7148,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -7174,7 +7174,7 @@ msgstr ""
 "alle feltene nedenfor adskilt med komma."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Sted Navn"
 
 #: templates/forms/location-editor.php:29
@@ -7190,7 +7190,7 @@ msgid "HTML Allowed."
 msgstr "HTML tillatt."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Beliggenhet Bilde"
 
 #: templates/forms/event/bookings-ticket-form.php:12
