--- a/wp-content/plugins/events-manager/includes/langs/dbem-nl_NL.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-nl_NL.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "Geen Locaties bericht"
 
 #: admin/em-options.php:1763
@@ -335,13 +335,13 @@ msgid "This setting was not changed."
 msgstr "Deze instelling werd niet gewijzigd."
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
 "Voer alstublieft uw Locatie-kenmerk in of laat het leeg als er geen locatie "
 "is."
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr "Voer uw Locatie-kenmerk in."
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -375,7 +375,7 @@ msgid "Search forms"
 msgstr "Zoekformulieren"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr "Evenement/Locatie Admin-pagina's"
 
 #: admin/em-options.php:522
@@ -387,7 +387,7 @@ msgid "Events list page"
 msgstr "Evenementen-lijst pagina"
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr "Locatie-lijst pagina"
 
 #: admin/em-options.php:525
@@ -707,7 +707,7 @@ msgstr ""
 "De omschrijving van het evenement dat in de kalender zal worden getoond."
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal Locatie"
 
 #: admin/em-options.php:1410
@@ -1144,7 +1144,7 @@ msgid "All events link text?"
 msgstr "Tekst voor \"Alle evenementen\"-link?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Locaties van evenementen"
 
 #: widgets/em-locations.php:22
@@ -1404,7 +1404,7 @@ msgstr "Help"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Locaties"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1592,7 +1592,7 @@ msgstr "Datum"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Locatie"
 
 #: admin/em-bookings.php:152
@@ -1795,7 +1795,7 @@ msgid "Category Related Placeholders"
 msgstr "Invoegcodes voor categorieën"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Invoegcodes voor locaties"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -2002,7 +2002,7 @@ msgid "Example:"
 msgstr "Voorbeeld:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Locaties op hoofdblog?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2271,7 +2271,7 @@ msgid "no default location"
 msgstr "geen standaardlocatie"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Standaardlocatie"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2285,7 +2285,7 @@ msgid "(not applicable with event ownership on presently, coming soon!)"
 msgstr "(nog niet beschikbaar met evenementseigendom, nog even geduld!)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "Standaardland"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3772,7 +3772,7 @@ msgstr ""
 "hieronder worden gebruikt."
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "Opmaak standaardballon locatie"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3785,7 +3785,7 @@ msgid "Event."
 msgstr "Evenement."
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "Enkele locatie/kaart opmaak"
 
 #: admin/em-options.php:1639
@@ -4997,7 +4997,7 @@ msgstr "Mijn evenementen"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "Mijn locaties"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -5053,12 +5053,12 @@ msgid "Add Event"
 msgstr "Evenement toevoegen"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Locatie toevoegen"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Locatie bewerken"
 
 #: buddypress/screens/profile.php:11
@@ -5743,7 +5743,7 @@ msgid "The country"
 msgstr "Het land"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "Locatienaam"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6532,31 +6532,31 @@ msgid "Display locations on your blog."
 msgstr "Geef locatie weer op uw blog."
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Nieuwe locatie toegevoegen"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Nieuwe locatie"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Bekijk locatie"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Locaties zoeken"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "Geen locaties gevonden"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "Geen locaties gevonden in de prullenbak"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Ouderlocatie"
 
 #: em-template-tags.php:286
@@ -6896,15 +6896,15 @@ msgid "This event does not have a physical location."
 msgstr "Dit evenement heeft geen fysieke locatie."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Locatie:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Geen locatie"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Naam van de locatie:"
 
 #: templates/forms/event/location.php:70
@@ -6949,7 +6949,7 @@ msgid "none selected"
 msgstr "niets geselecteerd"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "Locatie niet gevonden"
 
 #: templates/forms/event/recurring-when.php:10
@@ -7121,7 +7121,7 @@ msgstr "Afbeelding evenement"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "U heeft geen eigen attributen gedefinieerd in een van uw Locaties Manager "
@@ -7131,7 +7131,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -7158,7 +7158,7 @@ msgstr ""
 "velden - gescheiden door komma's - in te voeren."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Naam van de locatie"
 
 #: templates/forms/location-editor.php:29
@@ -7174,7 +7174,7 @@ msgid "HTML Allowed."
 msgstr "HTML toegestaan."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Afbeelding van de locatie"
 
 #: templates/forms/event/bookings-ticket-form.php:12
