--- a/wp-content/plugins/events-manager/includes/langs/dbem-pl_PL.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-pl_PL.po
@@ -160,7 +160,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "Brak komunikatu Lokalizacje"
 
 #: admin/em-options.php:1763
@@ -336,11 +336,11 @@ msgid "This setting was not changed."
 msgstr "Ustawienie nie zostało zmienione."
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr "Proszę podać ID lokalizacji, lub pozostaw puste gdy brak lokalizacji."
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr "Proszę podać ID lokalizacji."
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -374,7 +374,7 @@ msgid "Search forms"
 msgstr "Formularze wyszukiwania"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr "Strony administracyjne Wydarzeń/Miejsc"
 
 #: admin/em-options.php:522
@@ -386,7 +386,7 @@ msgid "Events list page"
 msgstr "Strona listy wydarzeń"
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr "Strona list wydarzeń"
 
 #: admin/em-options.php:525
@@ -705,7 +705,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr "Opis wydarzenia, który będzie pojawiał się w Kalendarzu."
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal lokalizacji"
 
 #: admin/em-options.php:1410
@@ -1179,7 +1179,7 @@ msgid "All events link text?"
 msgstr "Tekst linków wszystkich wydarzeń?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Lokalizacje wydarzeń"
 
 #: widgets/em-locations.php:22
@@ -1439,7 +1439,7 @@ msgstr "Pomoc"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Lokalizacje"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1634,7 +1634,7 @@ msgstr "Data"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Lokalizacja"
 
 #: admin/em-bookings.php:152
@@ -1836,7 +1836,7 @@ msgid "Category Related Placeholders"
 msgstr "Wypełniacze związane z Kategorią"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Wypełniacze związane z lokalizacją"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -2043,7 +2043,7 @@ msgid "Example:"
 msgstr "Przykład:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Lokalizacje na głównym blogu?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2313,7 +2313,7 @@ msgid "no default location"
 msgstr "brak domyślnej lokalizacji"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Domyślna lokalizacja"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2327,7 +2327,7 @@ msgid "(not applicable with event ownership on presently, coming soon!)"
 msgstr "(nie dotyczy własności wydarzeń aktualnie,  dostępne już wkrótce!)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "Domyślny kraj lokalizacji"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3854,7 +3854,7 @@ msgstr ""
 "zastosowane. "
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "Format balona lokalizacji. "
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3867,7 +3867,7 @@ msgid "Event."
 msgstr "Wydarzenie."
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "Pojedyncza lokalizacja/Format mapy wydarzenia"
 
 #: admin/em-options.php:1639
@@ -5073,7 +5073,7 @@ msgstr "Moje wydarzenia"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "Moje lokalizacje"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -5129,12 +5129,12 @@ msgid "Add Event"
 msgstr "Dodaj wydarzenie"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Dodaj lokalizację"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Edytuj lokalizacje"
 
 #: buddypress/screens/profile.php:11
@@ -5819,7 +5819,7 @@ msgid "The country"
 msgstr "Kraj"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "Nazwa lokalizacji"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6608,31 +6608,31 @@ msgid "Display locations on your blog."
 msgstr "Wyświetl lokalizacje na swoim blogu."
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Dodaj nową lokalizację"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Nowa lokalizacja"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Zobacz lokalizacje"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Szukaj lokalizacji"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "Nie znaleziono miejsc"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "Nie znaleziono miejsc w koszu"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Nadrzędna lokalizacja"
 
 #: em-template-tags.php:286
@@ -6976,15 +6976,15 @@ msgid "This event does not have a physical location."
 msgstr "To wydarzenie nie ma jeszcze fizycznej lokalizacji."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Lokalizacja:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Brak miejsca"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Nazwa lokalizacji:"
 
 #: templates/forms/event/location.php:70
@@ -7032,7 +7032,7 @@ msgid "none selected"
 msgstr "nic nie wybrano"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "Nie znaleziono lokalizacji"
 
 #: templates/forms/event/recurring-when.php:10
@@ -7205,7 +7205,7 @@ msgstr "Główny obrazek wydarzenia"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "Nie masz żadnych indywidualnych atrybutów zdefiniowanych w żadnym z ustawień "
@@ -7215,7 +7215,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -7241,7 +7241,7 @@ msgstr ""
 "dodając wszystkie poniższe pola oddzielając je przecinkami."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Nazwa lokalizacji"
 
 #: templates/forms/location-editor.php:29
@@ -7257,7 +7257,7 @@ msgid "HTML Allowed."
 msgstr "Dozwolony HTML."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Główny obrazek lokalizacji"
 
 #: templates/forms/event/bookings-ticket-form.php:12
