--- a/wp-content/plugins/events-manager/includes/langs/dbem-ru_RU.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-ru_RU.po
@@ -160,7 +160,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "Нет сообщений Местоположение"
 
 #: admin/em-options.php:1763
@@ -326,11 +326,11 @@ msgid "This setting was not changed."
 msgstr "Этот параметр не был изменен."
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr ""
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -363,7 +363,7 @@ msgid "Search forms"
 msgstr "Форма поиска"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr ""
 
 #: admin/em-options.php:522
@@ -375,7 +375,7 @@ msgid "Events list page"
 msgstr ""
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr "Страница списка мест"
 
 #: admin/em-options.php:525
@@ -674,7 +674,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr "Описание мероприятия, которое будет отображаться в календаре."
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal расположение"
 
 #: admin/em-options.php:1410
@@ -1112,7 +1112,7 @@ msgid "All events link text?"
 msgstr "Текст ссылки на все мероприятия?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Места проведения мероприятий"
 
 #: widgets/em-locations.php:22
@@ -1372,7 +1372,7 @@ msgstr "Помощь"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Места"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1560,7 +1560,7 @@ msgstr "Дата"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Местоположение"
 
 #: admin/em-bookings.php:152
@@ -1763,7 +1763,7 @@ msgid "Category Related Placeholders"
 msgstr "Заполнители, касающиеся категорий"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Заполнители, касающиеся мест проведений"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -1967,7 +1967,7 @@ msgid "Example:"
 msgstr "Например:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Местоположения на главном сайте?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2240,7 +2240,7 @@ msgid "no default location"
 msgstr "Нет мест по умолчанию"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Место по умолчанию"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2255,7 +2255,7 @@ msgid "(not applicable with event ownership on presently, coming soon!)"
 msgstr "(неприменимо при владении мероприятием на временной основе, скоро!)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "Страна по умолчанию"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3744,7 +3744,7 @@ msgstr ""
 "карту со всеми местами и событиями.  Будут использоваться настройки ниже."
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "Формат всплывающей подсказки местоположения"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3757,7 +3757,7 @@ msgid "Event."
 msgstr "Мероприятие."
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "Формат одного местоположения/карты мероприятия"
 
 #: admin/em-options.php:1639
@@ -4968,7 +4968,7 @@ msgstr "Мои мероприятия"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "Мои места"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -5024,12 +5024,12 @@ msgid "Add Event"
 msgstr "Добавить мероприятие"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Добавить место"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Измененить место"
 
 #: buddypress/screens/profile.php:11
@@ -5715,7 +5715,7 @@ msgid "The country"
 msgstr "Страна"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "Название места"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6504,31 +6504,31 @@ msgid "Display locations on your blog."
 msgstr "Показывать местоположения на вашем сайте."
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Добавить новое место"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Новое местоположение"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Просмотр места"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Искать местоположения"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "Местоположения не найдены"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "Местоположения в корзине не найдены"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Родитель местоположения"
 
 #: em-template-tags.php:286
@@ -6868,15 +6868,15 @@ msgid "This event does not have a physical location."
 msgstr "Это мероприятие не имеет физического местоположения."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Место проведения:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Нет мест проведения"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Название местоположения:"
 
 #: templates/forms/event/location.php:70
@@ -6919,7 +6919,7 @@ msgid "none selected"
 msgstr "не выбрано"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "Место не найдено"
 
 #: templates/forms/event/recurring-when.php:10
@@ -7091,7 +7091,7 @@ msgstr "Изображение мероприятия"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "Вы не определили ни одного пользовательского атрибута в настроках шаблонов "
@@ -7100,7 +7100,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -7126,7 +7126,7 @@ msgstr ""
 "maps.google.com</a> добавляя все приведенные ниже поля, разделенные запятыми."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Название места"
 
 #: templates/forms/location-editor.php:29
@@ -7142,7 +7142,7 @@ msgid "HTML Allowed."
 msgstr "HTML разрешен."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Изображение местоположения"
 
 #: templates/forms/event/bookings-ticket-form.php:12
