--- a/wp-content/plugins/events-manager/includes/langs/dbem-sk_SK.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-sk_SK.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "nie Miesta správa"
 
 #: admin/em-options.php:1763
@@ -318,11 +318,11 @@ msgid "This setting was not changed."
 msgstr ""
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
+msgid "Please enter your Hike ID."
 msgstr ""
 
 #: admin/em-options.php:399 admin/em-options.php:1801
@@ -351,7 +351,7 @@ msgid "Search forms"
 msgstr "vyhľadávanie formulára"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr ""
 
 #: admin/em-options.php:522
@@ -363,7 +363,7 @@ msgid "Events list page"
 msgstr ""
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr ""
 
 #: admin/em-options.php:525
@@ -655,7 +655,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr ""
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal umiestnenie"
 
 #: admin/em-options.php:1410
@@ -1081,7 +1081,7 @@ msgid "All events link text?"
 msgstr "Text odkazu všetkých udalostí?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Miesto konania udalosti"
 
 #: widgets/em-locations.php:22
@@ -1341,7 +1341,7 @@ msgstr "Pomoc"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Miesta konania"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1528,7 +1528,7 @@ msgstr "Dátum"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Miesta konania"
 
 #: admin/em-bookings.php:152
@@ -1731,7 +1731,7 @@ msgid "Category Related Placeholders"
 msgstr "Zástupné kódy kategórie"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Zástupné kódy miesta konania"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -1938,7 +1938,7 @@ msgid "Example:"
 msgstr "Príklad:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Miesta konania v hlavnom blogu?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2206,7 +2206,7 @@ msgid "no default location"
 msgstr "Žiadne východzie miesto konania"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Východzie miesto konania"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2223,7 +2223,7 @@ msgstr ""
 "pribudne až neskôr!)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "Východzia krajina miesta konania"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3694,7 +3694,7 @@ msgstr ""
 "vašich udalostí a miest konania sa použije nižšie uvedené nastavenie."
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "Formát textovej bubliny k miestu konania"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3707,7 +3707,7 @@ msgid "Event."
 msgstr "Udalosť."
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "Formát mapy s jednou udalosťou/miestom konania"
 
 #: admin/em-options.php:1639
@@ -4895,7 +4895,7 @@ msgstr "Moje udalosti"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "Moje miesta konania"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -4951,12 +4951,12 @@ msgid "Add Event"
 msgstr "Pridať udalosť"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Pridať miesto konania"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Upraviť miesto konania"
 
 #: buddypress/screens/profile.php:11
@@ -5637,7 +5637,7 @@ msgid "The country"
 msgstr "Okres/kraj/štát"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "Názov miesta konania"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6426,31 +6426,31 @@ msgid "Display locations on your blog."
 msgstr "Zobraziť miesta konania na vašom blogu."
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Pridať nové miesto konania"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Nové miesto konania"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Zobraziť miesto konania"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Hľadať miesta konania"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "Nebolo nájdené žiadne miesto konania"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "V koši nebolo nájdené žiadne miesto konania"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Nadradené miesto konania"
 
 #: em-template-tags.php:286
@@ -6789,15 +6789,15 @@ msgid "This event does not have a physical location."
 msgstr "Táto udalosť nemá určené fyzické miesto konania."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Miesto konania:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Žiadne miesto konania"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Názov miesta konania:"
 
 #: templates/forms/event/location.php:70
@@ -6842,7 +6842,7 @@ msgid "none selected"
 msgstr "nie je vybrané"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "Miesto konania nenájdené"
 
 #: templates/forms/event/recurring-when.php:10
@@ -7014,7 +7014,7 @@ msgstr "Obrázok udalosti"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "Nemáte definované žiadne vlastné atribúty v nastaveniach šablóny vášho "
@@ -7024,7 +7024,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -7050,7 +7050,7 @@ msgstr ""
 "pridaním všetkých nižšie uvedených polí oddelených čiarkou."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Názov miesta konania"
 
 #: templates/forms/location-editor.php:29
@@ -7066,7 +7066,7 @@ msgid "HTML Allowed."
 msgstr "Povolené HTML."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Obrázok miesta konania"
 
 #: templates/forms/event/bookings-ticket-form.php:12
