--- a/wp-content/plugins/events-manager/includes/langs/dbem-sv_SE.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-sv_SE.po
@@ -159,7 +159,7 @@ msgid ""
 msgstr ""
 
 #: widgets/em-locations.php:124
-msgid "No Locations message"
+msgid "No Hikes message"
 msgstr "Ngen Platser meddelande"
 
 #: admin/em-options.php:1763
@@ -332,14 +332,14 @@ msgid "This setting was not changed."
 msgstr "Inställningen ändrades inte."
 
 #: admin/em-options.php:330
-msgid "Please enter your Location ID, or leave blank for no location."
+msgid "Please enter your Hike ID, or leave blank for no location."
 msgstr ""
-"Vänligen ange ditt PlatsID (Location ID) eller lämna detta blankt för ingen "
+"Vänligen ange ditt PlatsID (Hike ID) eller lämna detta blankt för ingen "
 "plats."
 
 #: admin/em-options.php:338
-msgid "Please enter your Location ID."
-msgstr "Vänligen ange ditt PlatsID (Location ID)."
+msgid "Please enter your Hike ID."
+msgstr "Vänligen ange ditt PlatsID (Hike ID)."
 
 #: admin/em-options.php:399 admin/em-options.php:1801
 msgid "Please add a User ID."
@@ -372,7 +372,7 @@ msgid "Search forms"
 msgstr "Sökformulär"
 
 #: admin/em-options.php:521
-msgid "Event/Location admin pages"
+msgid "Event/Hike admin pages"
 msgstr "Adminsidor för evenemang/Plats"
 
 #: admin/em-options.php:522
@@ -384,7 +384,7 @@ msgid "Events list page"
 msgstr "Sida för evenemanglista"
 
 #: admin/em-options.php:524
-msgid "Locations list page"
+msgid "Hikes list page"
 msgstr "Sida för platslista"
 
 #: admin/em-options.php:525
@@ -699,7 +699,7 @@ msgid "The description of the event that will appear in the calendar."
 msgstr "Beskrivningen av evenemanget som det ska se ut i kalendern"
 
 #: admin/em-options.php:1410
-msgid "iCal Location"
+msgid "iCal Hike"
 msgstr "iCal-plats"
 
 #: admin/em-options.php:1410
@@ -1171,7 +1171,7 @@ msgid "All events link text?"
 msgstr "Alla evenemang länktext?"
 
 #: widgets/em-locations.php:13
-msgid "Event Locations"
+msgid "Event Hikes"
 msgstr "Evenemangplats"
 
 #: widgets/em-locations.php:22
@@ -1431,7 +1431,7 @@ msgstr "Hjälp"
 #: em-actions.php:182 em-install.php:472 em-install.php:474 em-install.php:972
 #: em-install.php:1031 em-posts.php:236 em-posts.php:239 em-posts.php:241
 #: templates/tables/locations.php:10 templates/tables/locations.php:13
-msgid "Locations"
+msgid "Hikes"
 msgstr "Platser"
 
 #: admin/em-admin.php:113 classes/em-people.php:35 events-manager.php:723
@@ -1628,7 +1628,7 @@ msgstr "Datum"
 #: templates/forms/location-editor.php:32
 #: templates/forms/location-editor.php:65
 #: templates/forms/location-editor.php:67 templates/tables/events.php:62
-msgid "Location"
+msgid "Hike"
 msgstr "Plats"
 
 #: admin/em-bookings.php:152
@@ -1830,7 +1830,7 @@ msgid "Category Related Placeholders"
 msgstr "Kategorirelaterade platshållare"
 
 #: admin/em-help.php:36 admin/em-ms-options.php:60 admin/em-options.php:258
-msgid "Location Related Placeholders"
+msgid "Hike Related Placeholders"
 msgstr "Platsrelaterade platshållare"
 
 #: admin/em-help.php:39 admin/em-ms-options.php:61 admin/em-options.php:259
@@ -2037,7 +2037,7 @@ msgid "Example:"
 msgstr "Exempel:"
 
 #: admin/em-ms-options.php:160
-msgid "Locations on main blog?"
+msgid "Hikes on main blog?"
 msgstr "Platser på huvudbloggen?"
 
 #: admin/em-ms-options.php:160 admin/em-ms-options.php:165
@@ -2307,7 +2307,7 @@ msgid "no default location"
 msgstr "ingen standardplats"
 
 #: admin/em-options.php:330 admin/em-options.php:338
-msgid "Default Location"
+msgid "Default Hike"
 msgstr "Standardplats"
 
 #: admin/em-options.php:330 admin/em-options.php:338
@@ -2324,7 +2324,7 @@ msgstr ""
 "snart!)"
 
 #: admin/em-options.php:342
-msgid "Default Location Country"
+msgid "Default Hike Country"
 msgstr "Standardland"
 
 #: admin/em-options.php:342 admin/em-options.php:1291
@@ -3843,7 +3843,7 @@ msgstr ""
 "alla dina platser och evenemang kommer inställningarna nedan att användas."
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
-msgid "Location balloon format"
+msgid "Hike balloon format"
 msgstr "Format på kartballongerna på platssidan"
 
 #: admin/em-options.php:1635 admin/em-options.php:1642
@@ -3856,7 +3856,7 @@ msgid "Event."
 msgstr "Evenemang."
 
 #: admin/em-options.php:1638
-msgid "Single Location/Event Map Format"
+msgid "Single Hike/Event Map Format"
 msgstr "Format på karta för enskild plats/evenemang"
 
 #: admin/em-options.php:1639
@@ -5061,7 +5061,7 @@ msgstr "Mina Evenemang"
 
 #: buddypress/bp-em-core.php:124 buddypress/bp-em-core.php:224
 #: buddypress/screens/my-locations.php:32
-msgid "My Locations"
+msgid "My Hikes"
 msgstr "Mina platser"
 
 #: buddypress/bp-em-core.php:136 buddypress/bp-em-core.php:233
@@ -5117,12 +5117,12 @@ msgid "Add Event"
 msgstr "Lägg till evenemang"
 
 #: buddypress/screens/my-locations.php:46 em-events.php:189 em-posts.php:242
-msgid "Add Location"
+msgid "Add Hike"
 msgstr "Lägg till plats"
 
 #: buddypress/screens/my-locations.php:48 classes/em-location.php:845
 #: em-events.php:191 em-posts.php:245
-msgid "Edit Location"
+msgid "Edit Hike"
 msgstr "Ändra Plats"
 
 #: buddypress/screens/profile.php:11
@@ -5807,7 +5807,7 @@ msgid "The country"
 msgstr "Landet"
 
 #: classes/em-location.php:256 widgets/em-locations.php:23
-msgid "Location name"
+msgid "Hike name"
 msgstr "Platsnamn"
 
 #: classes/em-location.php:256 classes/em-location.php:272
@@ -6593,31 +6593,31 @@ msgid "Display locations on your blog."
 msgstr "Visa platser på din blog."
 
 #: em-posts.php:243
-msgid "Add New Location"
+msgid "Add New Hike"
 msgstr "Lägg till ny plats"
 
 #: em-posts.php:246
-msgid "New Location"
+msgid "New Hike"
 msgstr "Ny Plats"
 
 #: em-posts.php:248
-msgid "View Location"
+msgid "View Hike"
 msgstr "Visa plats"
 
 #: em-posts.php:249
-msgid "Search Locations"
+msgid "Search Hikes"
 msgstr "Sök platser"
 
 #: em-posts.php:250
-msgid "No Locations Found"
+msgid "No Hikes Found"
 msgstr "Hittade inga platser"
 
 #: em-posts.php:251
-msgid "No Locations Found in Trash"
+msgid "No Hikes Found in Trash"
 msgstr "Hittade inga platser i papperskorgen"
 
 #: em-posts.php:252
-msgid "Parent Location"
+msgid "Parent Hike"
 msgstr "Ärvd plats"
 
 #: em-template-tags.php:286
@@ -6959,15 +6959,15 @@ msgid "This event does not have a physical location."
 msgstr "Detta evenemang saknar fysisk plats."
 
 #: templates/forms/event/location.php:32
-msgid "Location:"
+msgid "Hike:"
 msgstr "Plats:"
 
 #: templates/forms/event/location.php:35
-msgid "No Location"
+msgid "No Hike"
 msgstr "Ingen plats"
 
 #: templates/forms/event/location.php:65
-msgid "Location Name:"
+msgid "Hike Name:"
 msgstr "Platsnamn:"
 
 #: templates/forms/event/location.php:70
@@ -7011,7 +7011,7 @@ msgid "none selected"
 msgstr "ingen vald"
 
 #: templates/forms/map-container.php:3
-msgid "Location not found"
+msgid "Hike not found"
 msgstr "Platsen kunde inte hittas"
 
 #: templates/forms/event/recurring-when.php:10
@@ -7183,7 +7183,7 @@ msgstr "Evenemangbild"
 
 #: templates/forms/location/attributes.php:43
 msgid ""
-"You don't have any custom attributes defined in any of your Locations "
+"You don't have any custom attributes defined in any of your Hikes "
 "Manager template settings. Please add them the <a href='%s'>settings page</a>"
 msgstr ""
 "Du har inga egna attribut definierade i några av dina mallinställningar för "
@@ -7192,7 +7192,7 @@ msgstr ""
 #: templates/forms/location/attributes.php:51
 msgid ""
 "If you see any attributes under here, that means they're not used in "
-"Locations Manager formats. To add them, you need to add the custom attribute "
+"Hikes Manager formats. To add them, you need to add the custom attribute "
 "again to a formatting option in the settings page. To remove any of these "
 "depreciated attributes, give it a blank value and save."
 msgstr ""
@@ -7219,7 +7219,7 @@ msgstr ""
 "nedan separerade med kommatecken."
 
 #: templates/forms/location-editor.php:25
-msgid "Location Name"
+msgid "Hike Name"
 msgstr "Platsnamn"
 
 #: templates/forms/location-editor.php:29
@@ -7235,7 +7235,7 @@ msgid "HTML Allowed."
 msgstr "HTML Tillåtet."
 
 #: templates/forms/location-editor.php:52
-msgid "Location Image"
+msgid "Hike Image"
 msgstr "Platsbild"
 
 #: templates/forms/event/bookings-ticket-form.php:12
